# flask-docker-starterkit

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  docker-compose.prod.yml  docker-compose.yml  gunicorn.conf.py  pyproject.toml  requirements-dev.txt  requirements.txt  run.py
.github/: dependabot.yml  pull_request_template.md
.github/workflows/: docker-targets.yml  lint.yml  linter.yaml  linter.yml  security.yml  tests.yml  unit_tests.yaml
flask_starterkit/main/: debug.py  errors.py  logging_config.py
flask_starterkit/main/config/: __init__.py  settings.py
flask_starterkit/main/routes/: auth.py  health.py  home.py
flask_starterkit/tests/: conftest.py
flask_starterkit/tests/api/: errors_test.py  health_test.py
flask_starterkit/tests/api/auth/: auth_routes_test.py
flask_starterkit/tests/functions/: config_test.py  debug_test.py
flask_starterkit/tests/functions/helpers/: global_helper_test.py
